(lang dune 3.12)

(name jikan)

(generate_opam_files true)

(source
 (github syedtaz/jikan))

(authors "Tazmilur Saad")

(maintainers "Tazmilur Saad")

(license MIT)

(package
 (name jikan)
 (synopsis "[WIP] OCaml Implementation of the Network Time Protocol.")
 (description "[WIP] OCaml Implementation of the Network Time Protocol.")
 (depends ocaml dune)
 (tags
  ("time" "ntp")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
